<resources>
    <string name="app_name">B-Lit\'s Beat Blender!</string>
    <string name="copyright">\u00A9 Brandon Litwin 2019</string>
    <string name="come_get_some">Come Get Some</string>
    <string name="still_there">Still there?</string>
    <string name="damn_son">Damn, Son</string>
    <string name="speed_1x">Speed: 1X</string>
    <string name="speed_2x">Speed: 2X</string>
    <string name="speed_0_5x">Speed: 0.5X</string>
    <string name="stop_all">Stop All</string>
    <string name="start_game">Start</string>
    <string name="upload_sound_file">Upload Sound File</string>
    <string name="record_a_sound">Record a Sound</string>
    <string name="welcome">Welcome to B-Lit\'s Beat Blender! You can start now, \n or upload or record your own sound first.</string>
    <string name="menu">Menu</string>
    <string name="choose_file">Choose File</string>
    <string name="your_file">File Not Selected</string>
    <string name="uploaded_sounds">Uploaded Sound \n (Only most recent upload can be used)</string>
    <string name="stop">Stop</string>
    <string name="proximity_sensor">Proximity Sensor</string>
    <string name="loop">Loop</string>
    <string name="uploaded">Uploaded</string>
    <string name="recorded">Recorded</string>
    <string-array name="playback_choices">
        <item>0.5X Speed</item>
        <item>1X Speed</item>
        <item>2X Speed</item>
    </string-array>
    <string-array name="loop_choices">
        <item>Loop On</item>
        <item>Loop Off</item>
    </string-array>
</resources>
