<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/recordedloopcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/loop"
        app:layout_constraintStart_toStartOf="@+id/recordedSpinner"
        app:layout_constraintTop_toBottomOf="@+id/recordedSpinner" />

    <Spinner
        android:id="@+id/recordedSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintEnd_toEndOf="@+id/recorded"
        app:layout_constraintTop_toBottomOf="@+id/uploadedloopcheckBox" />

    <Button
        android:id="@+id/stopRecorded"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:onClick="stopSound"
        android:text="@string/stop"
        app:layout_constraintBaseline_toBaselineOf="@+id/recorded"
        app:layout_constraintEnd_toEndOf="@+id/uploadedSoundsText"
        app:layout_constraintStart_toEndOf="@+id/stloopcheckBox" />

    <Button
        android:id="@+id/recorded"
        android:layout_width="139dp"
        android:layout_height="37dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="63dp"
        android:gravity="center"
        android:onClick="playSound"
        android:text="@string/recorded"
        app:layout_constraintBottom_toBottomOf="@+id/recordedloopcheckBox"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/cgsSpinner"
        app:layout_constraintTop_toTopOf="@+id/uploadedSoundSpinner" />

    <Button
        android:id="@+id/stopUploaded"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="49dp"
        android:onClick="stopSound"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/uploadedSound"
        app:layout_constraintEnd_toEndOf="@+id/dsloopcheckBox"
        app:layout_constraintStart_toEndOf="@+id/uploadedSoundSpinner"
        app:layout_constraintTop_toTopOf="@+id/uploadedSound" />

    <Spinner
        android:id="@+id/uploadedSoundSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginBottom="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/cgsSpinner"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cgsloopcheckBox"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/still_there" />

    <Spinner
        android:id="@+id/stSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/dsSpinner"
        app:layout_constraintEnd_toEndOf="@+id/copyright"
        app:layout_constraintStart_toStartOf="@+id/uploadedSoundSpinner"
        app:layout_constraintTop_toTopOf="@+id/cgsSpinner" />


    <Spinner
        android:id="@+id/dsSpinner"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="107dp"
        app:layout_constraintBottom_toBottomOf="@+id/stopDS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/still_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:onClick="playSound"
        android:text="@string/still_there"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/stSpinner"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/damn_son"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:onClick="playSound"
        android:text="@string/damn_son"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/still_there"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/come_get_some"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="14dp"
        android:onClick="playSound"
        android:text="@string/come_get_some"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/cgsSpinner"
        app:layout_constraintStart_toStartOf="@+id/cgsSpinner" />

    <Button
        android:id="@+id/stop_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:onClick="stopAll"
        android:text="@string/stop_all"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@+id/menu" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:onClick="menu"
        android:text="@string/menu"
        app:layout_constraintStart_toEndOf="@+id/proximitycheckBox"
        app:layout_constraintTop_toTopOf="@+id/proximitycheckBox" />

    <TextView
        android:id="@+id/uploadedSoundsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/uploaded_sounds"
        app:layout_constraintBottom_toTopOf="@+id/stopUploaded"
        app:layout_constraintStart_toStartOf="@+id/uploadedSound" />

    <Button
        android:id="@+id/uploadedSound"
        android:layout_width="139dp"
        android:layout_height="37dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="180dp"
        android:gravity="center"
        android:onClick="playSound"
        android:text="@string/uploaded"
        app:layout_constraintBottom_toBottomOf="@+id/recordedloopcheckBox"
        app:layout_constraintEnd_toStartOf="@+id/uploadedSoundSpinner"
        app:layout_constraintStart_toStartOf="@+id/uploadedSoundSpinner"
        app:layout_constraintTop_toBottomOf="@+id/cgsSpinner" />

    <Button
        android:id="@+id/stopCGS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="stopSound"
        android:text="@string/stop"
        app:layout_constraintStart_toEndOf="@+id/stopST"
        app:layout_constraintTop_toBottomOf="@+id/stloopcheckBox" />

    <Button
        android:id="@+id/stopST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="153dp"
        android:layout_marginBottom="153dp"
        android:onClick="stopSound"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/uploadedSoundSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/damn_son" />

    <Button
        android:id="@+id/stopDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:onClick="stopSound"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@+id/uploadedSoundsText"
        app:layout_constraintEnd_toEndOf="@+id/uploadedSoundsText"
        app:layout_constraintStart_toEndOf="@+id/uploadedSoundsText" />

    <CheckBox
        android:id="@+id/proximitycheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="70dp"
        android:text="@string/proximity_sensor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cgsloopcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/loop"
        app:layout_constraintBottom_toTopOf="@+id/stopST"
        app:layout_constraintEnd_toEndOf="@+id/stopST" />

    <CheckBox
        android:id="@+id/dsloopcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:text="@string/loop"
        app:layout_constraintBottom_toTopOf="@+id/stopDS"
        app:layout_constraintEnd_toEndOf="@+id/stopDS" />

    <CheckBox
        android:id="@+id/stloopcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="12dp"
        android:text="@string/loop"
        app:layout_constraintStart_toStartOf="@+id/stSpinner"
        app:layout_constraintTop_toBottomOf="@+id/stSpinner" />

    <CheckBox
        android:id="@+id/uploadedloopcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop"
        app:layout_constraintStart_toStartOf="@+id/uploadedSoundSpinner"
        app:layout_constraintTop_toBottomOf="@+id/uploadedSoundSpinner" />


</androidx.constraintlayout.widget.ConstraintLayout>